# lite-xl-sample-native-plugin

./: .gitignore  README.md  changelog.md  init.lua  manifest.json  meson.build  meson_options.txt
.github/workflows/: release.yml  release_msys.yml
crossfiles/: linux_aarch64.conf  linux_i686.conf  macos_arm64.conf
plugins/: greet.lua
src/: sample.c
